deployment/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: microservice/exchange/auth
          ports:
            - containerPort: 8001
          imagePullPolicy: Always
      serviceAccountName: default

---
apiVersion: v1
kind: Service
metadata:
  name: exchange-auth
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
