deployment/exchange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange
  labels:
    app: exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange
  template:
    metadata:
      labels:
        app: exchange
    spec:
      hostname: exchange
      containers:
        - name: exchange
          image: ghcr.io/hashaneranda/container-apps/exchange/exchange:main
          ports:
            - containerPort: 8002
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
      serviceAccountName: default

---
apiVersion: v1
kind: Service
metadata:
  name: exchange-exchange
spec:
  selector:
    app: exchange
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
