deployment/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      hostname: gateway
      containers:
        - name: gateway
          image: ghcr.io/hashaneranda/container-apps/exchange/gateway:main
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
      serviceAccountName: default

---
apiVersion: v1
kind: Service
metadata:
  name: exchange-gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
