deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exchange-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: auth.kubernetes.internal
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: exchange-exchange
                port:
                  number: 8002
    - host: exchange.kubernetes.internal
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: exchange-auth
                port:
                  number: 8001
    - host: gateway.kubernetes.internal
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: exchange-gateway
                port:
                  number: 8000
